--- a/contrib/debian/stakecube-qt.desktop
+++ b/contrib/debian/stakecube-qt.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=STAKECUBE Core
+Name=Stakecube Core
 Comment=STAKECUBE P2P Cryptocurrency
 Comment[fr]=STAKECUBE, monnaie virtuelle cryptographique pair à pair
 Comment[tr]=STAKECUBE, eşten eşe kriptografik sanal para birimi
