--- a/src/qt/res/stakecube-qt-res.rc
+++ b/src/qt/res/stakecube-qt-res.rc
@@ -20,13 +20,13 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "STAKECUBE"
-            VALUE "FileDescription",    "STAKECUBE Core (OSS GUI client for STAKECUBE)"
+            VALUE "FileDescription",    "Stakecube Core (OSS GUI client for STAKECUBE)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "stakecube-qt"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
             VALUE "OriginalFilename",   "stakecube-qt.exe"
-            VALUE "ProductName",        "STAKECUBE Core"
+            VALUE "ProductName",        "Stakecube Core"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
